--- a/app/src/main/res/layout/activity_health.xml
+++ b/app/src/main/res/layout/activity_health.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".Health">
 
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginBottom="73dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
