--- a/app/src/main/res/layout/activity_skills.xml
+++ b/app/src/main/res/layout/activity_skills.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    android:gravity="center"
-   >
+    android:orientation="vertical"
+    tools:context=".Skills">
 
-
+<TextView
+    android:layout_marginTop="30dp"
+    android:text="hello"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Coding"
+        android:id="@+id/coding_button"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="communication"
+        android:id="@+id/communication_button" />
 </LinearLayout>
