--- a/app/src/main/res/layout/journey_home.xml
+++ b/app/src/main/res/layout/journey_home.xml
@@ -9,7 +9,8 @@
 
 <LinearLayout
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
                     <Button
                         android:id="@+id/button4"
@@ -32,6 +33,18 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="choose goal " />
+    <Button
+        android:id="@+id/button_Tracker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Track your dev " />
+    <Button
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="progress " />
 </LinearLayout>
 
 
