--- a/app/src/main/res/layout/choose_language.xml
+++ b/app/src/main/res/layout/choose_language.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/laka"
+    android:background="@drawable/languageback"
     tools:context=".languages">
 <TextView
     android:layout_width="match_parent"
@@ -22,7 +22,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+       android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:fontFamily="@font/abeezee"
         android:text="What language do you want to learn ? "
         android:textAlignment="center"
