--- a/app/src/main/res/layout/groupe_home.xml
+++ b/app/src/main/res/layout/groupe_home.xml
@@ -4,11 +4,46 @@
     android:layout_height="match_parent"
     android:background="@android:color/holo_green_light">
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Post Fragment"
-    android:textSize="30sp"
-    android:layout_centerInParent="true"/>
+    <include
+        android:id="@+id/main_page_toolbar"
+        layout="@layout/app_bar_layout">
+    </include>
 
-    </RelativeLayout>
+    <FrameLayout
+        android:id="@+id/main_container"
+        android:layout_width="match_parent"
+        android:layout_height="602dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="1dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/all_users_post_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignStart="@+id/main_container" />
+    </FrameLayout>
+
+    <ImageButton
+        android:id="@+id/add_new_post_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/add_post"
+        android:scaleType="centerCrop"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="4dp"
+        android:background="@color/colorPrimaryDark"
+        android:baselineAlignBottom="false"
+        android:clickable="true"
+        android:focusableInTouchMode="false"
+        android:backgroundTint="@color/white"
+        android:visibility="visible" />
+
+</RelativeLayout>
+
