--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -5,18 +5,17 @@
             android:id="@+id/nav_chat"
             android:icon="@drawable/chat"
             android:title="Chat" />
-    <item
-        android:id="@+id/nav_journey"
-        android:icon="@drawable/journey"
-        android:title="Journey" />
-
         <item
             android:id="@+id/nav_group"
-            android:icon="@drawable/group"
+            android:icon="@drawable/ic_home"
             android:title="Post" />
         <item
             android:id="@+id/nav_explore"
             android:icon="@drawable/explore"
             android:title="Explore" />
+    <item
+        android:id="@+id/nav_profile"
+        android:icon="@drawable/profile"
+        android:title="Profile" />
     </menu>
 
