--- a/app/src/main/res/layout/choose_goal.xml
+++ b/app/src/main/res/layout/choose_goal.xml
@@ -6,285 +6,171 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ChooseGoal"
     android:orientation="vertical">
-
     <TextView
-
         android:id="@+id/textView11"
         android:layout_width="341dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/abeezee"
         android:text="choose a goal "
         android:textColor="#040404"
         android:textSize="30sp" />
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="20dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-    <androidx.cardview.widget.CardView
-        android:id="@+id/skill_card"
-        android:clickable="true"
-        android:layout_width="match_parent"
-        android:layout_height="173dp"
-        app:cardCornerRadius="8dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        >
-        <LinearLayout
-            android:background="@drawable/bg1"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/skill_card"
+            android:clickable="true"
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
-
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="8dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            >
+            >
             <LinearLayout
-                android:layout_width="269dp"
-                android:layout_height="133dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="30dp"
-                android:orientation="horizontal">
-
+                android:background="@drawable/bg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
                 <LinearLayout
-                    android:layout_width="307dp"
-                    android:layout_height="150dp"
-                    android:orientation="vertical">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="312dp"
-                        android:layout_height="147dp">
-
-                        <TextView
-                            android:id="@+id/textView7"
-                            android:layout_width="269dp"
-                            android:layout_height="49dp"
-                            android:text="Upskill yourself and boost your career"
-                            android:textColor="@color/white"
-                            android:textSize="18dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.0"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.642" />
-
-                        <TextView
-                            android:layout_width="230dp"
-                            android:layout_height="46dp"
-                            android:layout_marginBottom="6dp"
-                            android:text="Learn a new skill"
-                            android:textColor="#ffff"
-                            android:textSize="24dp"
-                            app:layout_constraintBottom_toTopOf="@+id/textView7"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.0"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0" />
-
-                        <ImageView
-                            android:layout_width="125dp"
-                            android:layout_height="63dp"
-
-                            android:src="@drawable/skill_icon"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.828"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="6dp"
+                        android:text="Learn a new skill"
+                        android:textColor="#ffff"
+                        android:textSize="24dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="20dp"
+                        />
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="40dp"
+                        android:src="@drawable/skill_icon"
+                        />
                 </LinearLayout>
-
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="30dp"
+                    android:text="Upskill yourself and boost your career"
+                    android:textColor="@color/white"
+                    android:textSize="18dp"
+                    />
             </LinearLayout>
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:id="@+id/language_card"
-        android:clickable="true"
-        android:layout_width="match_parent"
-        android:layout_height="173dp"
-        app:cardCornerRadius="8dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        >
-        <LinearLayout
-            android:background="@drawable/bg5"
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/language_card"
+            android:clickable="true"
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
-
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="8dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            >
             <LinearLayout
-                android:layout_width="269dp"
-                android:layout_height="133dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="30dp"
-                android:orientation="horizontal">
-
+                android:background="@drawable/bg5"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
                 <LinearLayout
-                    android:layout_width="307dp"
-                    android:layout_height="150dp"
-                    android:orientation="vertical">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="312dp"
-                        android:layout_height="147dp">
-
-                        <TextView
-                            android:id="@+id/textView1"
-                            android:layout_width="206dp"
-                            android:layout_height="53dp"
-                            android:text="Express yourself in multiple languages "
-                            android:textColor="@color/white"
-                            android:textSize="18dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.0"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.68" />
-
-                        <TextView
-                            android:id="@+id/textView9"
-                            android:layout_width="233dp"
-                            android:layout_height="56dp"
-                            android:layout_marginBottom="6dp"
-                            android:text="Learn a new language"
-                            android:textColor="#ffff"
-                            android:textSize="24dp"
-                            app:layout_constraintBottom_toTopOf="@+id/textView1"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.0"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0" />
-
-                        <ImageView
-                            android:id="@+id/imageView5"
-                            android:layout_width="125dp"
-
-                            android:layout_height="63dp"
-                            android:src="@drawable/talk"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.914"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.38" />
-
-                        <ImageView
-                            android:layout_width="60dp"
-                            android:layout_height="42dp"
-
-                            android:src="@drawable/ic_baseline_language_24"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.817"
-                            app:layout_constraintStart_toStartOf="@+id/textView9"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.352" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:padding="10dp"
+                        android:id="@+id/textView9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="6dp"
+                        android:text="Learn a new language"
+                        android:textColor="#ffff"
+                        android:textSize="24dp"
+                        />
+                    <ImageView
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/imageView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/talk"
+                        />
                 </LinearLayout>
-
+                <ImageView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="60dp"
+                    android:layout_height="42dp"
+                    android:src="@drawable/ic_baseline_language_24"
+                    />
+                <TextView
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginRight="30dp"
+                    android:id="@+id/textView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Express yourself in multiple languages "
+                    android:textColor="@color/white"
+                    android:textSize="18dp"
+                    />
             </LinearLayout>
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:id="@+id/health_card"
-        android:clickable="true"
-        android:layout_width="match_parent"
-        android:layout_height="173dp"
-        app:cardCornerRadius="8dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        >
-        <LinearLayout
-            android:background="@drawable/bg6"
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/health_card"
+            android:clickable="true"
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
-
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="8dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            >
             <LinearLayout
-                android:layout_width="269dp"
-                android:layout_height="133dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="30dp"
-                android:orientation="horizontal">
-
+                android:background="@drawable/bg6"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
                 <LinearLayout
-                    android:layout_width="307dp"
-                    android:layout_height="150dp"
-                    android:orientation="vertical">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="312dp"
-                        android:layout_height="147dp">
-
-                        <TextView
-                            android:id="@+id/textView8"
-                            android:layout_width="206dp"
-                            android:layout_height="53dp"
-                            android:text="Lead a healthier life  "
-                            android:textColor="@color/white"
-                            android:textSize="18dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.0"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.836" />
-
-                        <TextView
-                            android:id="@+id/textView10"
-                            android:layout_width="233dp"
-                            android:layout_height="56dp"
-                            android:layout_marginBottom="6dp"
-                            android:text="Improve your health and wellness "
-                            android:textColor="#ffff"
-                            android:textSize="24dp"
-                            app:layout_constraintBottom_toTopOf="@+id/textView8"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.0"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0" />
-
-                        <ImageView
-                            android:id="@+id/imageView6"
-                            android:layout_width="125dp"
-
-                            android:layout_height="63dp"
-                            android:src="@drawable/ic_baseline_healing_24"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.914"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.38" />
-
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/textView10"
+                        android:layout_width="223dp"
+                        android:layout_height="wrap_content"
+                        android:text="Improve your health and wellness "
+                        android:textColor="#ffff"
+                        android:textSize="24dp" />
+                    <ImageView
+                        android:id="@+id/imageView6"
+                        android:layout_width="71dp"
+                        android:layout_height="63dp"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/ic_baseline_healing_24" />
                 </LinearLayout>
-
+                <TextView
+                    android:padding="30dp"
+                    android:id="@+id/textView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Lead a healthier life  "
+                    android:textColor="@color/white"
+                    android:textSize="18dp"
+                    />
             </LinearLayout>
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
-</ScrollView>
 </LinearLayout>
