--- a/app/src/main/res/layout/choose_skill.xml
+++ b/app/src/main/res/layout/choose_skill.xml
@@ -75,8 +75,8 @@
 
             <ImageView
                 android:id="@+id/FrontendIv"
-                android:layout_width="200dp"
-                android:layout_height="300dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@drawable/frontend"
                 android:clickable="true"/>
 
@@ -143,8 +143,8 @@
 
             <ImageView
                 android:id="@+id/EditingIv"
-                android:layout_width="200dp"
-                android:layout_height="300dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:clickable="true"
@@ -244,7 +244,7 @@
                  android:layout_marginEnd="30dp"
                  android:text="Communication"
                  android:textColor="#d703082b"
-                 android:textSize="23dp"
+                 android:textSize="18dp"
                  android:textStyle="bold" />
 
 
