--- a/app/src/main/res/layout/explore_home.xml
+++ b/app/src/main/res/layout/explore_home.xml
@@ -1,14 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_green_light">
+    tools:context=".ExploreFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Journey Fragment"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+        <EditText
+            android:id="@+id/search_box_input"
+            android:layout_width="280dp"
+            android:layout_height="70dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="21dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/inputs"
+            android:ems="10"
+            android:hint="Search here... "
+            android:inputType="textMultiLine"
+            android:padding="10dp"/>
+
+
+        <ImageButton
+            android:id="@+id/search_people_friends_button"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@+id/search_box_input"
+            android:background="@drawable/inputs"
+            android:src="@drawable/explore"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/search_result_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/search_box_input"
+        android:layout_margin="10dp"
+        >
+    </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
