--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,9 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorBlueT">#642fb4ff</color>
-    <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#000000</color>
+
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#FF9800</color>
     <color name="colorAccent">#F2F2F2</color>
     <color name="title_color">#ffffff</color>
     <color name="colorBlue">#2FB4FF</color>
