--- a/app/src/main/res/layout/activity_health.xml
+++ b/app/src/main/res/layout/activity_health.xml
@@ -4,304 +4,174 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/health"
+    android:background="@drawable/bg_choose"
     tools:context=".Health"
     android:orientation="vertical">
-
     <TextView
-        android:layout_width="117dp"
+        android:layout_width="match_parent"
+        android:layout_marginTop="50dp"
         android:layout_height="176dp"
         android:layout_marginLeft="20dp"
         android:fontFamily="@font/damion"
         android:text="Take care of your body and mind "
         android:textColor="@color/white"
         android:textSize="30dp" />
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-
     <LinearLayout
-        android:layout_width="233dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:id="@+id/LWeight"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/bg_item"
             android:clickable="true"
             android:elevation="10dp"
-            android:minHeight="80dp"
-            android:orientation="horizontal"
-            android:padding="12dp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
+            app:cardCornerRadius="@dimen/fastscroll__bubble_size"
+            >
+            <TextView
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="8dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Lose Weight"
-                    android:textColor="#4a4a4a"
-                    android:textSize="18sp" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
+                android:text="Lose Weight"
+                android:textColor="#4a4a4a"
+                android:textSize="18sp" />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
             android:id="@+id/GWeight"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/bg_item"
             android:clickable="true"
             android:elevation="10dp"
-            android:minHeight="80dp"
-            android:orientation="horizontal"
-            android:padding="12dp">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
+            app:cardCornerRadius="@dimen/fastscroll__bubble_size">
+            <TextView
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="8dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Gain Weight"
-                    android:textColor="#4a4a4a"
-                    android:textSize="18sp" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-
-
-        <LinearLayout
+                android:text="Gain Weight"
+                android:textColor="#4a4a4a"
+                android:textSize="18sp" />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
             android:id="@+id/EatHealthy"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/bg_item"
             android:clickable="true"
             android:elevation="10dp"
-            android:minHeight="80dp"
-            android:orientation="horizontal"
-            android:padding="12dp">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-
+            app:cardCornerRadius="@dimen/fastscroll__bubble_size">
+            <TextView
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="Eat healthy"
-                    android:textColor="#4a4a4a"
-                    android:textSize="18sp" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
+                android:text="Eat healthy"
+                android:textColor="#4a4a4a"
+                android:textSize="18sp" />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
             android:id="@+id/Exercise"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/bg_item"
             android:clickable="true"
             android:elevation="10dp"
-            android:minHeight="80dp"
-            android:orientation="horizontal"
-            android:padding="12dp">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-
+            app:cardCornerRadius="@dimen/fastscroll__bubble_size">
+            <TextView
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="Exercise"
-                    android:textColor="#4a4a4a"
-                    android:textSize="18sp" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <LinearLayout
+                android:text="Exercise"
+                android:textColor="#4a4a4a"
+                android:textSize="18sp" />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
             android:id="@+id/Support"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/bg_item"
             android:clickable="true"
-            android:minHeight="80dp"
-            android:orientation="horizontal"
-            android:padding="12dp"
-            android:elevation="10dp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
+            android:elevation="10dp"
+            app:cardCornerRadius="@dimen/fastscroll__bubble_size">
+            <TextView
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="8dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Mental Support"
-                    android:textColor="#4a4a4a"
-                    android:textSize="18sp" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
+                android:text="Mental Support"
+                android:textColor="#4a4a4a"
+                android:textSize="18sp" />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
             android:id="@+id/Anxiety"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/bg_item"
             android:clickable="true"
-            android:minHeight="80dp"
-            android:orientation="horizontal"
-            android:padding="12dp"
-            android:elevation="10dp">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
+            android:elevation="10dp"
+            app:cardCornerRadius="@dimen/fastscroll__bubble_size">
+            <TextView
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="8dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Manage stress and anxiety"
-                    android:textColor="#4a4a4a"
-                    android:textSize="18sp" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-
-
-        <LinearLayout
+                android:text="Manage stress and anxiety"
+                android:textColor="#4a4a4a"
+                android:textSize="18sp" />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
             android:id="@+id/Care"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/bg_item"
             android:clickable="true"
-            android:minHeight="80dp"
-            android:orientation="horizontal"
-            android:padding="12dp"
-            android:elevation="10dp">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-
+            android:elevation="10dp"
+            app:cardCornerRadius="@dimen/fastscroll__bubble_size">
+            <TextView
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="Practice self-care"
-                    android:textColor="#4a4a4a"
-                    android:textSize="18sp" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
+                android:text="Practice self-care"
+                android:textColor="#4a4a4a"
+                android:textSize="18sp" />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
             android:id="@+id/Problem"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/bg_item"
             android:clickable="true"
-            android:minHeight="80dp"
-            android:orientation="horizontal"
-            android:padding="12dp"
-            android:elevation="10dp">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-
+            android:elevation="10dp"
+            app:cardCornerRadius="@dimen/fastscroll__bubble_size">
+            <TextView
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="Solve a problem"
-                    android:textColor="#4a4a4a"
-                    android:textSize="18sp" />
-
-
-            </LinearLayout>
-        </LinearLayout>
+                android:text="Solve a problem"
+                android:textColor="#4a4a4a"
+                android:textSize="18sp" />
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
-
-</LinearLayout>
-
 </LinearLayout>
