--- a/app/src/main/res/layout/add_post.xml
+++ b/app/src/main/res/layout/add_post.xml
@@ -1,53 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/bg_choose"
     android:layout_height="match_parent"
-    tools:context=".AddPost">
+    tools:context=".AddPost"
+    android:orientation="vertical">
 
-    <include
-        android:id="@+id/update_post_page_toolbar"
-        layout = "@layout/app_bar_layout" />
+    <TextView
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add a post"
+        android:textColor="@color/white"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:layout_marginLeft="20dp"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="15"
+        android:shadowColor="@android:color/darker_gray"/>
 
-    <ImageButton
-        android:id="@+id/select_post_image"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="214dp"
-        android:scaleType="fitCenter"
-        app:srcCompat="@drawable/select_image" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginRight="20dp"
+        android:layout_weight="1"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="10dp">
 
-    <EditText
-        android:id="@+id/post_description"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="157dp"
-        android:background="@drawable/inputs"
-        android:ems="10"
-        android:hint="Write something about your image here..."
-        android:inputType="textMultiLine" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/post_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/inputs"
+                android:ems="10"
+                android:hint="What's on your mind ?"
+                android:inputType="textMultiLine"
+                android:padding="30dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/select_post_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/white"
+                    android:src="@drawable/ic_add_post"
+                    android:tooltipText="add an image "/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/abeezee"
+                    android:padding="15dp"
+                    android:text="add an image"
+                    android:textColor="@color/black" />
+
+
+            </LinearLayout>
+        </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
+
+
+
 
     <Button
         android:id="@+id/update_post_button"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="107dp"
+        android:layout_marginTop="20dp"
+       android:layout_marginStart="200dp"
         android:layout_marginBottom="93dp"
-        android:background="@drawable/button"
+        android:backgroundTint="#8FF12C"
         android:text="Add Post"
-        android:textColor="@android:color/white"
+        android:fontFamily="@font/abeezee"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
 
-</RelativeLayout>
+</LinearLayout>
