--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -20,6 +20,7 @@
             android:id="@+id/attach"
             android:layout_width="58dp"
             android:layout_height="58dp"
+            android:backgroundTint="@color/white"
             android:src="@drawable/ic__attach_file"/>
         <EditText
             android:id="@+id/messageEt"
