--- a/app/src/main/res/layout/comments.xml
+++ b/app/src/main/res/layout/comments.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="5dp"
+    android:background="#F6F5F5"
     tools:context=".CommentsActivity">
 
     <TextView
@@ -14,10 +15,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_margin="5dp"
-        android:text="Comments:"
+        android:text="Comments"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/comments_list"
@@ -35,6 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentStart="true"
         android:layout_marginRight="55dp"
         android:background="@drawable/inputs"
@@ -48,6 +51,9 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/comment_input"
         android:layout_alignParentEnd="true"
+        android:backgroundTint="#F6F5F5"
         android:src="@drawable/send"
         android:padding="15dp"/>
+
+
 </RelativeLayout>
