--- a/app/src/main/res/layout/display_comments.xml
+++ b/app/src/main/res/layout/display_comments.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="20dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    app:cardCornerRadius="30dp"
+    android:background="@color/white"
+    android:elevation="20dp"
+    android:clickable="true"
+    android:id="@+id/groupCard">
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -9,7 +21,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_margin="7dp"
-        android:background="@drawable/border">
+      >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,40 +38,10 @@
                 android:textSize="16sp"
                 android:textStyle="bold"/>
 
-            <TextView
-                android:id="@+id/simple_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="commented on"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="14sp"
-                android:textStyle="bold"/>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_margin="10dp">
 
-            <TextView
-                android:id="@+id/comment_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Date: "
-                android:textSize="14sp"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:id="@+id/comment_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Time: "
-                android:textSize="14sp"
-                android:textStyle="bold"/>
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -73,10 +55,38 @@
                 android:layout_height="wrap_content"
                 android:text="Comment text will display here... "
                 android:textSize="16sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/abeezee"
+                android:textColor="@color/black"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:id="@+id/comment_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/abeezee"
+                android:textColor="@color/black"
+                android:textSize="14sp"
                 android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/comment_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/abeezee"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:textStyle="bold"/>
+
 
         </LinearLayout>
 
     </LinearLayout>
 
-</RelativeLayout>
+</RelativeLayout> </androidx.cardview.widget.CardView>
