--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,147 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileFragment">
+    android:background="#151C2B"
+    >
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:src="@drawable/half_circle" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#00000000"
+        android:minHeight="82dp"
+        android:theme="?attr/actionBarTheme"
+        app:title="My Profile" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_marginTop="100dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/my_profile_pic"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="15dp"
-                android:src="@drawable/profile"/>
-
-            <TextView
-                android:id="@+id/my_profile_full_name"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Profile Name"
-                android:layout_below="@+id/my_profile_pic"
-                android:layout_marginTop="5dp"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="@android:color/background_light"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="35dp"
+                app:cardBackgroundColor="@color/bluedark"
+                app:cardCornerRadius="13dp"
+                app:cardElevation="6dp"
+                app:cardPreventCornerOverlap="true"
+                app:cardUseCompatPadding="true">
 
-            <TextView
-                android:id="@+id/my_username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="user name"
-                android:layout_below="@+id/my_profile_full_name"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="@android:color/background_light"
-                android:textSize="18sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/my_profile_status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Hey there, i ma using social app, developed by us"
-                android:layout_below="@+id/my_username"
-                android:layout_marginTop="5dp"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="22sp" />
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/my_profile_pic"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/profile" />
 
-            <TextView
-                android:id="@+id/my_country"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Country"
-                android:layout_below="@+id/my_profile_status"
-                android:layout_marginTop="30dp"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="@color/colorAccent"
-                android:textSize="18sp" />
+                    <TextView
+                        android:id="@+id/my_profile_full_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center_horizontal"
+                        android:text="Achour Elbattah"
+                        android:textColor="@android:color/white"
+                        android:textSize="19sp"
+                        android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/my_dob"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Date of Birth"
-                android:layout_below="@+id/my_country"
-                android:layout_marginTop="2dp"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="@color/colorAccent"
-                android:textSize="18sp" />
+                    <TextView
+                        android:id="@+id/my_country"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="10dp"
+                        android:drawableStart="@drawable/ic_person_pin_circle_black_24dp"
+                        android:gravity="center_horizontal"
+                        android:text="Morocco"
+                        android:textColor="#CCCCCC"
+                        android:textSize="15sp" />
 
-            <TextView
-                android:id="@+id/my_gender"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Gender"
-                android:layout_below="@+id/my_dob"
-                android:layout_marginTop="2dp"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="@color/colorAccent"
-                android:textSize="18sp" />
+                    <Button
+                        android:id="@+id/button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/selector_btn_dark"
+                        android:paddingStart="20dp"
+                        android:paddingTop="10dp"
+                        android:paddingEnd="20dp"
+                        android:paddingBottom="10dp"
+                        android:text="Edit Profile"
+                        android:textColor="@color/white"
+                        android:textSize="11sp" />
 
-            <TextView
-                android:id="@+id/my_relationship_status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Relationship status"
-                android:layout_below="@+id/my_gender"
-                android:layout_marginTop="2dp"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="@color/colorAccent"
-                android:textSize="18sp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/my_post_button"
-                android:layout_width="170dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="1dp"
-                android:layout_marginTop="50dp"
-                android:text="No. of Posts"
-                android:layout_below="@+id/my_relationship_status"
-                android:background="@color/colorPrimaryDark"
-                android:textSize="16sp"
-                android:textColor="@android:color/background_light"
-                android:textStyle="bold"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginEnd="10dp"
+                            android:layout_weight="1"
+                            android:gravity="center_horizontal"
+                            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/my_friends_button"
-                android:layout_width="170dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="1dp"
-                android:layout_marginTop="50dp"
-                android:text="No. of Friends"
-                android:layout_below="@+id/my_relationship_status"
-                android:background="@color/colorPrimaryDark"
-                android:textSize="16sp"
-                android:textColor="@android:color/background_light"
-                android:textStyle="bold"/>
+                            <TextView
+                                android:id="@+id/my_post_button"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="3658"
+                                android:textColor="@color/white"
+                                android:textSize="17sp" />
 
+                            <TextView
+                                android:id="@+id/textView7"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:textColor="@color/white" />
+                        </LinearLayout>
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginEnd="10dp"
+                            android:layout_weight="1"
+                            android:gravity="center_horizontal"
+                            android:orientation="vertical">
 
-        </RelativeLayout>
+                            <TextView
+                                android:id="@+id/my_friends_button"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="7025"
+                                android:textColor="@color/white"
+                                android:textSize="17sp" />
+
+                            <TextView
+                                android:id="@+id/textView9"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:textColor="@color/white" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center_horizontal"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/textView10"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="5087"
+                                android:textColor="@color/white"
+                                android:textSize="17sp" />
+
+                            <TextView
+                                android:id="@+id/textView11"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:textColor="@color/white" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
     </ScrollView>
-
 </RelativeLayout>
