--- a/app/src/main/res/layout/home_posts.xml
+++ b/app/src/main/res/layout/home_posts.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="20dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    app:cardCornerRadius="@dimen/fastscroll__bubble_size"
+    android:background="@color/white"
+    android:elevation="20dp"
+    android:clickable="true"
+    android:id="@+id/groupCard">
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -12,7 +24,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/border">
+       >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -52,14 +64,6 @@
                     android:orientation="horizontal"
                     android:padding="2dp">
 
-                    <TextView
-                        android:id="@+id/text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="has been updated a post."
-                        android:textColor="@android:color/darker_gray"
-                        android:textSize="13sp"
-                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -75,7 +79,8 @@
                         android:layout_height="wrap_content"
                         android:text="Date"
                         android:textColor="@android:color/black"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"
+                        android:layout_marginRight="5dp"/>
 
                     <TextView
                         android:id="@+id/post_time"
@@ -120,6 +125,7 @@
                 android:id="@+id/like_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
                 android:src="@drawable/dislike"/>
 
             <TextView
@@ -138,9 +144,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="150dp"
                 android:baselineAlignBottom="false"
+                android:backgroundTint="@color/white"
                 android:src="@drawable/comment"/>
         </LinearLayout>
 
     </LinearLayout>
 
-</RelativeLayout>
+</RelativeLayout></androidx.cardview.widget.CardView>
