--- a/app/src/main/res/layout/others_profile.xml
+++ b/app/src/main/res/layout/others_profile.xml
@@ -1,125 +1,200 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="#151C2B"
+    >
+<ImageView
+    android:id="@+id/imageView"
+    android:layout_width="match_parent"
+    android:layout_height="250dp"
+    android:src="@drawable/half_circle" />
+
+<androidx.appcompat.widget.Toolbar
+    android:id="@+id/toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#00000000"
+    android:minHeight="82dp"
+    android:theme="?attr/actionBarTheme"
+    app:title="My Profile" />
+
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OthersProfile">
+    android:layout_marginTop="100dp">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <RelativeLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_marginStart="35dp"
+            android:layout_marginEnd="35dp"
+            app:cardBackgroundColor="@color/bluedark"
+            app:cardCornerRadius="13dp"
+            app:cardElevation="6dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/person_profile_pic"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="15dp"
-                android:src="@drawable/profile"/>
-
-            <TextView
-                android:id="@+id/person_full_name"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Profile Name"
-                android:layout_below="@+id/person_profile_pic"
-                android:layout_marginTop="5dp"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="@android:color/background_light"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/person_username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="user name"
-                android:layout_below="@+id/person_full_name"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="@android:color/background_light"
-                android:textSize="18sp" />
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/person_profile_pic"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/profile" />
 
-            <TextView
-                android:id="@+id/person_profile_status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Hey there, i ma using social app, developed by us"
-                android:layout_below="@+id/person_username"
-                android:layout_marginTop="5dp"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="22sp" />
+                <TextView
+                    android:id="@+id/person_full_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_horizontal"
+                    android:text="Achour Elbattah"
+                    android:textColor="@android:color/black"
+                    android:textSize="19sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/person_country"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Country"
-                android:layout_below="@+id/person_profile_status"
-                android:layout_marginTop="30dp"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/person_country"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:drawableStart="@drawable/ic_person_pin_circle_black_24dp"
+                    android:gravity="center_horizontal"
+                    android:text="Morocco"
+                    android:textColor="#CCCCCC"
+                    android:textSize="15sp" />
 
-            <TextView
-                android:id="@+id/person_dob"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Date of Birth"
-                android:layout_below="@+id/person_country"
-                android:layout_marginTop="2dp"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textSize="18sp" />
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/selector_btn_dark"
+                    android:paddingStart="20dp"
+                    android:paddingTop="10dp"
+                    android:paddingEnd="20dp"
+                    android:paddingBottom="10dp"
+                    android:text="Edit Profile"
+                    android:textColor="@color/white"
+                    android:textSize="11sp" />
 
-            <TextView
-                android:id="@+id/person_sex"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Gender"
-                android:layout_below="@+id/person_dob"
-                android:layout_marginTop="2dp"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="@color/colorAccent"
-                android:textSize="18sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="10dp"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/my_post_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="3658"
+                            android:textColor="@color/white"
+                            android:textSize="17sp" />
+
+                        <TextView
+                            android:id="@+id/textView7"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="Project"
+                            android:textColor="@color/white" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="10dp"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/my_friends_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="7025"
+                            android:textColor="@color/white"
+                            android:textSize="17sp" />
+
+                        <TextView
+                            android:id="@+id/textView9"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="Follower"
+                            android:textColor="@color/white" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/textView10"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="5087"
+                            android:textColor="@color/white"
+                            android:textSize="17sp" />
+
+                        <TextView
+                            android:id="@+id/textView11"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="Following"
+                            android:textColor="@color/white" />
+                    </LinearLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/person_sex"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gender"
+            android:layout_below="@+id/person_dob"
+            android:layout_marginTop="2dp"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
 
-            <Button
-                android:id="@+id/person_send_friend_request_btn"
-                android:layout_width="230dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="45dp"
-                android:background="@color/colorPrimaryDark"
-                android:text="Send Friend Request"
-                android:textColor="@android:color/background_light"
-                android:textSize="16sp"
-                android:layout_centerHorizontal="true"/>
 
-            <Button
-                android:id="@+id/person_decline_friend_request"
-                android:layout_width="230dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/person_send_friend_request_btn"
-                android:layout_marginTop="8dp"
-                android:background="@color/colorPrimary"
-                android:text="Decline Friend Request"
-                android:textColor="@android:color/background_light"
-                android:textSize="16sp"
-                android:layout_centerHorizontal="true"/>
 
-        </RelativeLayout>
-    </ScrollView>
-
+    </LinearLayout>
+</ScrollView>
 </RelativeLayout>
