--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -8,14 +8,14 @@
         <item
             android:id="@+id/nav_group"
             android:icon="@drawable/ic_home"
-            android:title="Post" />
+            android:title="Home" />
         <item
             android:id="@+id/nav_explore"
             android:icon="@drawable/explore"
             android:title="Explore" />
     <item
         android:id="@+id/nav_profile"
-        android:icon="@drawable/profile"
+        android:icon="@drawable/ic_baseline_person_24"
         android:title="Profile" />
     </menu>
 
